@@ -7,3 +7,153 @@ tags:
 categories: Java基础
 
 ---
+## 0.学习准备
+1. 基础落下了很多了，是时候啃一波JVM了
+感觉很深奥，就先从视频看起，以后再看书补充啦
+2. 参考资料
+参考书籍《深入理解Java虚拟机》，《Java虚拟机基础教程》
+参考视频《深入理解JVM》(目前学习)
+3. JVM常用配置参数
+	- 跟踪参数(Trace)
+	- 堆的分配参数
+	- 栈的分配参数
+
+---
+## 1.跟踪参数
+**1)测试准备：**
+1. 跟踪参数的使用：
+项目目录如下：
+![](http://p5ki4lhmo.bkt.clouddn.com/00058JVM%E5%AD%A6%E4%B9%A02-01-1.jpg)
+创建项目之后会针对测试类进行配置。
+Eclipse下RUN-->RUN configuration/DEBUG configuration
+![](http://p5ki4lhmo.bkt.clouddn.com/00058JVM%E5%AD%A6%E4%B9%A02-02.jpg)
+2. TestGCArgs.java类代码如下：
+		public class TestGCArgs {
+			public static void main(String[] args) {
+				String sum="";
+				for(int i=0;i<5000;i++){
+					String a="123";
+					sum=sum+a;
+				}
+				System.out.println("finish");
+			}
+		}
+
+**2)对GC的跟踪：**
+-verbose:gc：打开gc日志
+1. 打印简要GC信息：`-XX:+PrintGC`
+测试参数：-verbose:gc -XX:+PrintGC
+测试结果：
+		[GC (Allocation Failure)  45568K->704K(173056K), 0.0026189 secs]
+		[GC (Allocation Failure)  46272K->686K(173056K), 0.0021835 secs]
+		..省略数行..
+		[GC (Allocation Failure)  182923K->760K(303616K), 0.0030116 secs]
+		finish
+结果分析：
+		[GC (Allocation Failure)  45568K->704K(173056K), 0.0026189 secs]
+		[GC （gc原因) GC前大小->GC后大小(堆大小)，所用时间]
+Allocation Failure：
+引起垃圾回收的原因. 本次GC是因为年轻代中没有任何合适的区域能够存放需要分配的数据结构而触发的。
+2. 打印GC详细信息：`-XX:+PrintGCDetails`
+测试参数：-verbose:gc -XX:+PrintGCDetails
+测试结果：
+		[GC (Allocation Failure) [PSYoungGen: 45568K->648K(52736K)] 45568K->656K(173056K), 0.0149955 secs] [Times: user=0.02 sys=0.00, real=0.01 secs] 
+		[GC (Allocation Failure) [PSYoungGen: 46216K->672K(98304K)] 46224K->680K(218624K), 0.0088765 secs] [Times: user=0.00 sys=0.00, real=0.01 secs] 
+		finish
+PSYoungGen：代表时新生代代的GC
+程序运行结束后还有一大段：堆的基本状况
+		Heap
+		//新生代信息
+		 PSYoungGen      total 98304K, used 62667K [0x0000000785b80000, 0x000000078c280000, 0x00000007c0000000)
+		//对象产生的空间
+		  eden space 91136K, 68% used [0x0000000785b80000,0x000000078980ae70,0x000000078b480000)
+		//from,to幸存代，大小一定相等
+		  from space 7168K, 9% used [0x000000078bb80000,0x000000078bc28030,0x000000078c280000)
+		  to   space 7168K, 0% used [0x000000078b480000,0x000000078b480000,0x000000078bb80000)
+		//老年代的总信息
+		 ParOldGen       total 120320K, used 8K [0x0000000711200000, 0x0000000718780000, 0x0000000785b80000)
+		  object space 120320K, 0% used [0x0000000711200000,0x0000000711202000,0x0000000718780000)
+		 Metaspace       used 2665K, capacity 4486K, committed 4864K, reserved 1056768K
+		  class space    used 288K, capacity 386K, committed 512K, reserved 1048576K
+可能还会有永久代，共享区间等信息。
+最后的那串数字：
+		[0x0000000785b80000,0x000000078980ae70,0x000000078b480000)
+		[低边界，当前边界，最大边界)
+会发现分配的空间((最大边界-低边界)/1024/1024)比描述的空间要大。(学习GC算法时详细介绍)
+3. 打印GC发生的时间戳：`-XX:+PrintGCTimeStamps`
+测试参数：-verbose:gc -XX:+PrintGCTimeStamps
+测试结果：
+		0.570: [GC (Allocation Failure)  45568K->688K(173056K), 0.0038101 secs]
+		0.620: [GC (Allocation Failure)  46256K->600K(173056K), 0.0106405 secs]
+		0.673: [GC (Allocation Failure)  46168K->628K(173056K), 0.0017099 secs]
+		finish
+4. 重定向GC日志：`-Xloggc:位置`
+以文件多的格式，可以帮助开发人员分析问题
+5. 每次GC前后都输出堆信息(那一大段)：`-XX:+PrintHeapAtGC`
+测试参数：-verbose:gc -XX:PrintHeapAtGC
+每次GC前后都输出信息，而不是到最后再输出：
+![](http://p5ki4lhmo.bkt.clouddn.com/00058JVM%E5%AD%A6%E4%B9%A02-03.jpg)
+
+**3)对类的监控：**
+1. 创建类TraceClassArgs:
+		public class TraceClassArgs {
+			public static void main(String[] args) {
+				Math.abs(-123);
+				String a=new String();
+				Random random=new Random();
+				Date date=new Date();
+				System.out.println("finish");
+			}
+		}
+2. 监控类的加载：`-XX:+TraceClassLoading`
+测试参数：-XX:+TraceClassLoading
+每次运行都要导入N多个jdk的jar包：
+![](http://p5ki4lhmo.bkt.clouddn.com/00058JVM%E5%AD%A6%E4%B9%A02-04.jpg)
+3. `-XX:+PrintClassHistogram`打印类的信息(表)
+开始不会打印任何类的信息
+在程序运行时按下Ctrl+Break之后就会显示出类信息
+测试参数：-XX:+PrintClassHistogram
+我这里一致测试不出来，可能是参数错了，贴个视频的截图吧：
+![](http://p5ki4lhmo.bkt.clouddn.com/00058JVM%E5%AD%A6%E4%B9%A02-05.jpg)
+
+---
+## 2.堆的分配参数
+**1)最大堆，最小堆：**
+1. 测试代码：
+		public class TestHeapArgs {
+			public static void main(String[] args) {
+				System.out.println("Xmx= "+Runtime.getRuntime().maxMemory()/1024/1024+"M");//最大可以使用空间
+				System.out.println("free mem= "+Runtime.getRuntime().freeMemory()/1024/1024+"M");//可用的memory
+				System.out.println("total mem= "+Runtime.getRuntime().totalMemory()/1024/1024+"M");//总memory，分配的内存
+			}
+		}
+2. 指定最大堆和最小堆：`-Xmx -Xms`
+最小堆就是打开虚拟机就分配的最小堆大小。
+测试参数：-Xmx20m -Xms5m
+测试结果：
+		Xmx= 18M	//最大可用内存
+		free mem= 4M	//可用内存
+		total mem= 5M	//总内存，目前只分配了最小的
+3. 在上面代码的最前面添加代码，分配1M空间：
+		byte[] b=new byte[1*1024*1024];
+测试结果：
+		Xmx= 18M
+		free mem= 3M
+		total mem= 5M
+可用内存变为了3M
+4. 将分配内存增大：
+		byte[] b=new byte[5*1024*1024];
+测试结果：
+		Xmx= 18M
+		free mem= 5M
+		total mem= 10M	//又分配了5M的内存
+在前面代码(分配5M的前面加上GC)
+		System.gc();
+会发现空闲空间变大了一点。
+5. 堆分配的一些思考：
+`-Xmx -Xms`应该如何设置
+如何将JRE瘦身，只保留自己用到的类
+
+**2)**
+
+---
